# telegram-gitlab-integration

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
k8s/: deployment.yaml  secret-template.yaml
tggl/: main.py
